AFS_Dev/src/objects/Opportunity_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Error Log</label>
    <nameField>
        <displayFormat>OppError#{0000000}</displayFormat>
        <label>Opportunity Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>